@@ -186,6 +186,10 @@ GAppInfo *g_app_info_get_default_for_type        (const char  *content_type,
 						  gboolean     must_support_uris);
 GAppInfo *g_app_info_get_default_for_uri_scheme  (const char  *uri_scheme);
 
+gboolean g_app_info_launch_default_for_uri (const char *uri,
+					    GAppLaunchContext *launch_context,
+					    GError *error);
+
 /**
  * GAppLaunchContext:
  * @parent_instance: The parent instance.
