@@ -46,6 +46,7 @@ g_app_info_set_as_default_for_extension
 g_app_info_add_supports_type
 g_app_info_can_remove_supports_type
 g_app_info_remove_supports_type
+g_app_info_launch_default_for_uri
 g_app_launch_context_new
 g_app_launch_context_get_display
 g_app_launch_context_get_startup_notify_id
